k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collab-redis
  namespace: collab
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    app: collab-redis
