k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collab-ingress-2
  namespace: collab
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: squiredocs-cert,herodocs-cert,heradocs-cert
    # Redirect HTTP to HTTPS
    networking.gke.io/v1beta1.FrontendConfig: collab-frontend-config
spec:
  defaultBackend:
    service:
      name: collab-app
      port:
        number: 80
